--- a/index.html
+++ b/index.html
@@ -2,22 +2,34 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>🎧 Music Share with Debug</title>
+  <title>🎧 Music Share App</title>
   <link rel="stylesheet" href="style.css" />
   <script src="https://cdn.jsdelivr.net/npm/peerjs@1.4.7/dist/peerjs.min.js"></script>
 </head>
 <body>
   <div class="container">
-    <h2>🎵 Share Your Music + Mic</h2>
+    <h2>🎵 Share Music + Mic</h2>
 
     <div class="box">
       <label><strong>Your ID:</strong> <span id="my-id">...</span></label>
+    </div>
+
+    <!-- Start stream -->
+    <div class="box">
+      <button onclick="prepareAudioStream()">🎙 Start Stream (Music + Mic)</button>
     </div>
 
     <div class="box">
       <input id="peer-id" placeholder="Enter peer ID to call" />
       <button onclick="startCall()">📞 Start Call</button>
       <button onclick="stopCall()">❌ Stop Call</button>
+    </div>
+
+    <!-- Incoming call UI -->
+    <div class="box" id="incoming-call-box" style="display: none;">
+      <div><strong>📲 Caller ID:</strong> <span id="caller-id">...</span></div>
+      <button onclick="answerCall()">✅ Answer Call</button>
+      <button onclick="rejectCall()">❌ Reject Call</button>
     </div>
 
     <div class="status" id="status">🔌 Not connected</div>
