--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
       <h3>🧪 Debug Info</h3>
       <pre id="debug-log">Waiting...</pre>
     </div>
-  </div>
 
-  <script src="script.js"></script>
+    <div id="mobile-playback-button" class="box" style="display: none;"></div>
+
+    <script src="script.js"></script>
 </body>
 </html>
