--- a/index.html
+++ b/index.html
@@ -19,6 +19,18 @@
       <button onclick="prepareAudioStream()">🎙 Start Stream (Music + Mic)</button>
     </div>
 
+    <!-- Compression slider -->
+    <div class="box">
+      <label for="ratio-slider">🔊 Compression Strength (Ratio): <span id="ratio-value">12</span></label>
+      <input type="range" id="ratio-slider" min="1" max="20" value="12" step="1" />
+    </div>
+
+    <!-- Volume meter -->
+    <div class="box">
+      <label>📊 Input Volume:</label>
+      <progress id="volume-meter" value="0" max="100"></progress>
+    </div>
+
     <div class="box">
       <input id="peer-id" placeholder="Enter peer ID to call" />
       <button onclick="startCall()">📞 Start Call</button>
