--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       <label><strong>Your ID:</strong> <span id="my-id">...</span></label>
     </div>
 
-    <!-- Start stream -->
     <div class="box">
       <button onclick="prepareAudioStream()">🎙 Start Stream (Music + Mic)</button>
     </div>
@@ -23,6 +22,20 @@
     <div class="box">
       <label for="ratio-slider">🔊 Compression Strength (Ratio): <span id="ratio-value">12</span></label>
       <input type="range" id="ratio-slider" min="1" max="20" value="12" step="1" />
+    </div>
+
+    <!-- EQ sliders -->
+    <div class="box">
+      <label>🎚 Bass: <span id="bass-val">1</span></label>
+      <input type="range" id="bass" min="0" max="2" step="0.1" value="1">
+    </div>
+    <div class="box">
+      <label>🎛 Mid: <span id="mid-val">1</span></label>
+      <input type="range" id="mid" min="0" max="2" step="0.1" value="1">
+    </div>
+    <div class="box">
+      <label>🔊 Treble: <span id="treble-val">1</span></label>
+      <input type="range" id="treble" min="0" max="2" step="0.1" value="1">
     </div>
 
     <!-- Volume meter -->
